--- a/dogMicroservice/src/main/resources/application.properties
+++ b/dogMicroservice/src/main/resources/application.properties
@@ -1,6 +1,17 @@
 server.port=8085
 spring.application.name=dogMicroservice
 
+eureka.client.serviceUrl.defaultZOne=http://localhost:8761/erureka
+eureka.instance.prefer-ip-address=true
+spring.h2.console.enabled=true
+spring.datasource.driver-class-name=org.h2.Driver
+
+spring.datasource.url=jdbc:h2:mem:bootapp;DB_CLOSE_DELAY=-1
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+
 
 
 
