--- a/eureka/src/main/resources/application.properties
+++ b/eureka/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 server.port=8761
 eureka.client.register-with-eureka=false
+
+spring.application.name = eureka-server
+eureka.client.fetch-registry = false
