Added security module

--- a/dogMicroservice/src/main/resources/application.properties
+++ b/dogMicroservice/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 server.port=8085
 spring.application.name=dogMicroservice
 
+#Eureka URL for Postman 192.168.0.175:8761/DOGMICROSERVICE/dogs
 eureka.client.serviceUrl.defaultZOne=http://localhost:8761/erureka
 eureka.instance.prefer-ip-address=true
 spring.h2.console.enabled=true
