--- a/dogMicroservice/src/main/resources/application.properties
+++ b/dogMicroservice/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-server.port=8085
+server.port=8084
+
 spring.application.name=dogMicroservice
 
 #Eureka URL for Postman 192.168.0.175:8761/DOGMICROSERVICE/dogs
@@ -13,6 +14,6 @@ spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
-
+server.servlet.session.cookie.max-age=1
 
 
